# psycheval

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md
tools/peval-py/: README.md  README.zh-CN.md  jsconfig.json  jsconfig.node.json  package-lock.json  package.json  pyproject.toml
tools/peval-py/scripts/: benchmark_serve_catalog.py  check_distribution_assets.py
tools/peval-py/src/peval_py/: i18n.py  models.py  workspace_reports.py  workspace_views.py
tools/peval-py/src/peval_py/assets/: report.html  report.js  serve_report_manager.html  serve_source_manager.html
tools/peval-py/src/peval_py/cli/: main.py
tools/peval-py/src/peval_py/html/: assets.py  renderer.py  serve_controls.py
tools/peval-py/src/peval_py/inputs/: loader.py
tools/peval-py/src/peval_py/serve/: exports.py  handler.py  lifecycle.py  payloads.py  runtime.py  server.py  sources.py  (+1 more)
tools/peval-py/tests/: serve_state_support.py  test_reports_html_assets_tokens.py  test_reports_html_core.py  test_reports_html_interactions.py  test_reports_html_serve_locale.py  test_reports_html_timeline.py  test_serve_catalog.py  test_serve_catalog_http.py  test_serve_catalog_ui.py  test_serve_state_http_reports.py  test_serve_state_http_sources.py  test_serve_state_notes_db.py  test_serve_state_workspace.py  test_summary_xlsx.py  test_workspace_reports.py  test_workspace_views.py
tools/peval-py/web/scripts/: build-report.mjs  check-report-bundle.mjs  report-bundle.mjs
tools/peval-py/web/src/: main.js
tools/peval-py/web/test/: app.test.js  bundle.test.js  data-tables.test.js  ui-state.test.js
(+64 files in other folders)
