[project]
name = "peval-py"
version = "0.1.0"
description = "Offline agent session message to ATIF trajectory converter"
requires-python = ">=3.11"
dependencies = [
    "markdown-it-py>=4.2,<5",
    "pandas>=2.2",
    "PyYAML>=6.0,<7",
    "XlsxWriter>=3.2,<4",
]

[project.scripts]
peval-py = "peval_py.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peval_py"]
